[gd_scene format=3 uid="uid://cs4asu0gglcme"]

[ext_resource type="Script" uid="uid://by7hpqx1vv8kc" path="res://scripts/actors/player/player.gd" id="1_8afob"]
[ext_resource type="PackedScene" uid="uid://b13u5je01lo47" path="res://scenes/player/player_model.tscn" id="2_gmlin"]
[ext_resource type="Script" uid="uid://cox3oxpmn5jq1" path="res://scripts/core/mouse_controller.gd" id="2_p47bc"]
[ext_resource type="PackedScene" uid="uid://ls2l55kjj88h" path="res://scenes/player/player_visuals.tscn" id="3_lvxji"]
[ext_resource type="Script" uid="uid://dcavmaw7nf6lk" path="res://scripts/inventory_system/inventory_manager.gd" id="5_0owmy"]
[ext_resource type="Script" uid="uid://vvntcqc73dcj" path="res://scripts/inventory_system/stats_manager.gd" id="6_qek5x"]
[ext_resource type="Script" uid="uid://ygi133mje6oj" path="res://scripts/inventory_system/equipment_manager.gd" id="7_5gtgg"]
[ext_resource type="PackedScene" uid="uid://bukpe1wm5nsne" path="res://scenes/faction_component.tscn" id="8_qek5x"]
[ext_resource type="Script" uid="uid://dsita382gglbe" path="res://scripts/core/mouse_interactor.gd" id="9_5gtgg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p47bc"]
radius = 0.3564453
height = 1.8111362

[node name="Player" type="CharacterBody3D" unique_id=1224365205 groups=["player"]]
collision_layer = 2
collision_mask = 255
script = ExtResource("1_8afob")

[node name="PlayerModel" parent="." unique_id=1612628095 instance=ExtResource("2_gmlin")]

[node name="PlayerVisuals" parent="." unique_id=925292958 instance=ExtResource("3_lvxji")]

[node name="MouseInteractor" type="Node3D" parent="." unique_id=932931299]
script = ExtResource("9_5gtgg")

[node name="InputController" type="Node" parent="." unique_id=1552446271]
script = ExtResource("2_p47bc")

[node name="Collider" type="CollisionShape3D" parent="." unique_id=1650569114]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.94920945, 0)
shape = SubResource("CapsuleShape3D_p47bc")
debug_color = Color(0.92640823, 0.2510672, 0.27369165, 0.41960785)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1084857451]
path_desired_distance = 0.75
target_desired_distance = 0.75
avoidance_enabled = true
radius = 1.0
avoidance_layers = 15
avoidance_mask = 15
debug_enabled = true
debug_path_custom_color = Color(1, 0.07058824, 0.019607844, 1)

[node name="InventoryManager" type="Node" parent="." unique_id=101755003]
script = ExtResource("5_0owmy")

[node name="StatsManager" type="Node" parent="." unique_id=1691230984]
script = ExtResource("6_qek5x")

[node name="EquipmentManager" type="Node" parent="." unique_id=206362343]
script = ExtResource("7_5gtgg")

[node name="FactionComponent" parent="." unique_id=1729141699 instance=ExtResource("8_qek5x")]
